--- a/es/latest-news/index.html
+++ b/es/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Últimas noticias sobre COVID-19</h1>
           
-            <p class="small-text">Última actualización&nbsp;20 de marzo de 2021 a las 9:33 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;20 de marzo de 2021 a las 1:42 p. m.</p>
           
         </div>
       </div>
@@ -163,6 +163,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--47666 -->March 19, 2021</small></p>
           <div class="card-text" lang="en-US">Legislation creates uniform, statewide policy to ensure employees have access to COVID-19 supplemental paid sick leave through September 30, 2021 SACRAMENTO – Building on the state’s action to expand paid sick days prote...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-094.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#357)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--92005f680a0814355023efa42f359b6f -->March 19, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) updated  to align with the latest science, as reflected by yesterday’s update from the Centers for Disease Control and Prevention (CDC).</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
