--- a/tl/data-and-tools/index.html
+++ b/tl/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga datos at tool</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 20, 2021 sa 9:33 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 20, 2021 sa 1:42 PM</p>
           
         </div>
       </div>
