--- a/es/safer-economy/index.html
+++ b/es/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Plan para una economía más segura</h1>
           
-            <p class="small-text">Última actualización&nbsp;20 de marzo de 2021 a las 1:42 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;21 de marzo de 2021 a las 9:28 a. m.</p>
           
         </div>
       </div>
