--- a/ko/safer-economy/index.html
+++ b/ko/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>더욱 안전한 경제를 위한 청사진</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 20일 오후 1:42</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 21일 오전 9:28</p>
           
         </div>
       </div>
