--- a/zh-hant/latest-news/index.html
+++ b/zh-hant/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有關COVID-19的最新消息</h1>
           
-            <p class="small-text">最近更新&nbsp;March 20, 2021 at 1:42 PM</p>
+            <p class="small-text">最近更新&nbsp;March 21, 2021 at 9:28 AM</p>
           
         </div>
       </div>
