--- a/es/data-and-tools/index.html
+++ b/es/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Datos y herramientas</h1>
           
-            <p class="small-text">Última actualización&nbsp;30 de marzo de 2021 a las 11:46 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;30 de marzo de 2021 a las 12:31 p. m.</p>
           
         </div>
       </div>
