--- a/vi/latest-news/index.html
+++ b/vi/latest-news/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tin tức mới nhất về COVID-19</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;30 tháng 3, 2021 lúc 13:38</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;30 tháng 3, 2021 lúc 15:47</p>
           
         </div>
       </div>
@@ -165,6 +165,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--14d4527c3db6b95dd0cf1ff9966f2cc5 -->March 29, 2021</small></p>
           <div class="card-text" lang="en-US">​Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19, including updated data and tiers for reducing COVID-19 in the state under the .</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-106.aspx" lang="en-US" hreflang="en-US" rel="external">CDPH Ramps Up COVID-19 Vaccine Outreach for Asian American and Pacific Islander (API) Californians </a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--329131f7b71864d8f67d73368f99d3bf -->March 29, 2021</small></p>
+          <div class="card-text" lang="en-US">Ahead of expanded eligibility for the COVID-19 vaccine in April, the California Department of Public Health (CDPH) is rolling out tailored, in-language outreach for Asian American and Pacific Islander (API) communities a...</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
