--- a/zh-hans/state-dashboard/index.html
+++ b/zh-hans/state-dashboard/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>加州COVID-19追踪</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年3月30日, 上午10:00</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月31日, 上午10:00</p>
           
         </div>
       </div>
@@ -165,8 +165,8 @@
   <div class="container py-2">
     <div class="row pb-4">
       <div class="col-lg-10 mx-auto">
-        <h2 class="text-center color-purple">更新于 2021年3月30日</h2>
-        <p>截至2021年3月30日，加州共有3,566,464例COVID-19确诊病例，造成57,788人死亡。</p>
+        <h2 class="text-center color-purple">更新于 2021年3月31日</h2>
+        <p>截至2021年3月31日，加州共有3,568,426例COVID-19确诊病例，造成57,936人死亡。</p>
       </div>
     </div>
 
@@ -175,8 +175,8 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">病例数</div>
 
-          <div id="total-cases-number" class="text-white font-size-1-2em my-2"><strong>3,566,464</strong> <span class="text-300">总共</span>           </div>
-          <div id="total-cases-today" class="text-white font-size-1-2em mt-2"><strong>1,996</strong> <span class="text-300">今日</span>           </div>
+          <div id="total-cases-number" class="text-white font-size-1-2em my-2"><strong>3,568,426</strong> <span class="text-300">总共</span>           </div>
+          <div id="total-cases-today" class="text-white font-size-1-2em mt-2"><strong>1,962</strong> <span class="text-300">今日</span>           </div>
           <div id="total-cases-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg id="arrow-up1" class="d-none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
@@ -190,8 +190,8 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">死亡数</div>
 
-          <div id="total-deaths-number" class="text-white font-size-1-2em my-2"><strong>57,788</strong> <span class="text-300">总共</span>           </div>
-          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2"><strong>10</strong> <span class="text-300">今日</span>           </div>
+          <div id="total-deaths-number" class="text-white font-size-1-2em my-2"><strong>57,936</strong> <span class="text-300">总共</span>           </div>
+          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2"><strong>148</strong> <span class="text-300">今日</span>           </div>
           <div id="total-deaths-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg id="arrow-up2" class="d-none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
@@ -205,29 +205,29 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">检测数</div>
 
-          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>53,684,932</strong> <span class="text-300">总共</span>           </div>
-          <div id="total-tested-today" class="text-white font-size-1-2em mt-2"><strong>174,999</strong> <span class="text-300">今日</span>           </div>
-          <div id="total-tested-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg id="arrow-up3" class="d-none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
+          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>53,786,487</strong> <span class="text-300">总共</span>           </div>
+          <div id="total-tested-today" class="text-white font-size-1-2em mt-2"><strong>127,906</strong> <span class="text-300">今日</span>           </div>
+          <div id="total-tested-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg id="arrow-up3" class="" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
- s1.13-0.5,1.13-1.13V7.38c0-0.02,0-0.04,0-0.06C28.11,7.3,28.11,7.28,28.11,7.27z"></path>               </svg>                <!--negative arrow-->               <svg id="arrow-down3" class="" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,21.4c0,0.62-0.5,1.13-1.13,1.13h-7.64c-0.62,0-1.13-0.5-1.13-1.13s0.5-1.13,1.13-1.13h5.05l-8.16-8.25
+ s1.13-0.5,1.13-1.13V7.38c0-0.02,0-0.04,0-0.06C28.11,7.3,28.11,7.28,28.11,7.27z"></path>               </svg>                <!--negative arrow-->               <svg id="arrow-down3" class="d-none" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,21.4c0,0.62-0.5,1.13-1.13,1.13h-7.64c-0.62,0-1.13-0.5-1.13-1.13s0.5-1.13,1.13-1.13h5.05l-8.16-8.25
  l-4.89,4.89c-0.44,0.44-1.15,0.44-1.59,0L0.9,8.07c-0.44-0.44-0.44-1.15,0-1.59c0.22-0.22,0.51-0.33,0.8-0.33s0.58,0.11,0.8,0.33
  l8.05,8.05l4.89-4.89c0.21-0.21,0.5-0.33,0.8-0.33c0,0,0,0,0,0c0.3,0,0.59,0.12,0.8,0.33l8.82,8.91v-4.68c0-0.62,0.5-1.13,1.13-1.13
- s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg></span> 1.6%<span class="text-300">检测呈阳性率</span>            </div>
+ s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg></span> 1.8%<span class="text-300">检测呈阳性率</span>            </div>
         </div>
       </div>
       <div class="col-md-3 px-10px">
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">施打的疫苗数</div>
 
-          <div id="total-vaccines-number" class="text-white font-size-1-2em my-4"><strong>17,649,015</strong> <span class="text-300">总共</span>           </div>
+          <div id="total-vaccines-number" class="text-white font-size-1-2em my-4"><strong>18,023,603</strong> <span class="text-300">总共</span>           </div>
         </div>
       </div>
     </div>
 
     <div class="row pb-4 py-5">
       <div class="col-lg-10 mx-auto">
-        <p class="small-text">根据2021年3月29日的数据在2021年3月30日更新。</p>
+        <p class="small-text">根据2021年3月30日的数据在2021年3月31日更新。</p>
 
         <p class="small-text">注：患病率为7日平均数据，有7天的滞后期。死亡率为7日平均数据，有21天的滞后期，因为报告有延迟。检测呈阳性率为7日平均数据，无滞后期。定向变化与上一个7日周期做比较。数据由加州公共卫生局 (California Department of Public Health) 提供。</p>
       </div>
@@ -271,7 +271,7 @@
 
 
 
-<p>加州共有3,566,464例COVID-19确诊病例，造成57,788人死亡。</p>
+<p>加州共有3,568,426例COVID-19确诊病例，造成57,936人死亡。</p>
 
 
 
@@ -306,7 +306,7 @@
 
 
 
-<p>加州的COVID-19诊断检测结果总数达到了53,684,932，较前一天的总数增加了174,999。过去7天的检测呈阳性率为1.6%。</p>
+<p>加州的COVID-19诊断检测结果总数达到了53,786,487，较前一天的总数增加了127,906。过去7天的检测呈阳性率为1.8%。</p>
 
 
 
@@ -341,7 +341,7 @@
 
 
 
-<p>在加州因确诊及疑似感染COVID-19而住院的人数总共达到了2,599，an increase of 3来自前一天的总数。在加州因确诊及疑似感染COVID-19而进入ICU的人数总共达到了613，a decrease of 18来自前一天的总数。</p>
+<p>在加州因确诊及疑似感染COVID-19而住院的人数总共达到了2,623，an increase of 24来自前一天的总数。在加州因确诊及疑似感染COVID-19而进入ICU的人数总共达到了627，an increase of 14来自前一天的总数。</p>
 
 
 
