--- a/zh-hant/latest-news/index.html
+++ b/zh-hant/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有關COVID-19的最新消息</h1>
           
-            <p class="small-text">最近更新&nbsp;March 30, 2021 at 4:17 PM</p>
+            <p class="small-text">最近更新&nbsp;March 31, 2021 at 9:17 AM</p>
           
         </div>
       </div>
