--- a/pages/wordpress-posts/charts-sandbox.html
+++ b/pages/wordpress-posts/charts-sandbox.html
@@ -27,11 +27,70 @@ addtositemap: false
 <div class="container">
   <div class="row">
 
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <cagov-chart-dashboard-confirmed-cases-episode-date class="chart">
+          <ul class="d-none">
+            <li data-label="chartTitle">Confirmed cases in California</li>
+            <li data-label="chartLegend1">{latest.HOSPITALIZED_PATIENTS.TOTAL} COVID-19 hospitalized patients</li>
+            <li data-label="chartLegend2Increase">{ABS_latest.CHANGE} more hospitalized patients {ABS_PCT_latest.CHANGE_FACTOR} increase</li>
+            <li data-label="chartLegend2Decrease">{ABS_latest.CHANGE} fewer hospitalized patients {ABS_PCT_latest.CHANGE_FACTOR} decrease</li>
+            <li data-label="averageLabel">14-day average</li>
+            <li data-label="tooltipLegend1">Reported date:</li>
+            <li data-label="tooltipLegend2">Total hospitalized COVID-19 patients:</li>
+            <li data-label="tooltipLegend3">14-day average of hospitalized patients:</li>
+          </ul>
+        </cagov-chart-dashboard-confirmed-cases-episode->                
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <cagov-chart-dashboard-confirmed-deaths-death-date class="chart">
+          <ul class="d-none">
+            <li data-label="chartTitle">Confirmed deaths in California</li>
+            <li data-label="chartLegend1">{latest.ICU_AVAILABLE_BEDS.TOTAL} ICU beds available</li>
+            <li data-label="chartLegend2Increase">{ABS_latest.CHANGE} increase from prior day total</li>
+            <li data-label="chartLegend2Decrease">{ABS_latest.CHANGE} decrease from prior day total</li>
+            <li data-label="tooltipCaption">On {DATE} there was a total of {VALUE} available ICU beds.</li>
+          </ul>
+        </cagov-chart-dashboard-confirmed-deaths-death-date>               
+      </div> 
+    </div>
+
+
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <cagov-chart-dashboard-total-tests-testing-date class="chart">
+          <ul class="d-none">
+            <li data-label="chartTitle">Total tests in California</li>
+            <li data-label="chartLegend1">{latest.HOSPITALIZED_PATIENTS.TOTAL} COVID-19 hospitalized patients</li>
+            <li data-label="chartLegend2Increase">{ABS_latest.CHANGE} more hospitalized patients {ABS_PCT_latest.CHANGE_FACTOR} increase</li>
+            <li data-label="chartLegend2Decrease">{ABS_latest.CHANGE} fewer hospitalized patients {ABS_PCT_latest.CHANGE_FACTOR} decrease</li>
+            <li data-label="averageLabel">14-day average</li>
+            <li data-label="tooltipLegend1">Reported date:</li>
+            <li data-label="tooltipLegend2">Total hospitalized COVID-19 patients:</li>
+            <li data-label="tooltipLegend3">14-day average of hospitalized patients:</li>
+          </ul>
+        </cagov-chart-dashboard-total-tests-testing-date>                
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <cagov-chart-dashboard-positivity-rate class="chart">
+          <ul class="d-none">
+            <li data-label="chartTitle">Positivity rate in California</li>
+            <li data-label="chartLegend1">{latest.ICU_AVAILABLE_BEDS.TOTAL} ICU beds available</li>
+            <li data-label="chartLegend2Increase">{ABS_latest.CHANGE} increase from prior day total</li>
+            <li data-label="chartLegend2Decrease">{ABS_latest.CHANGE} decrease from prior day total</li>
+            <li data-label="tooltipCaption">On {DATE} there was a total of {VALUE} available ICU beds.</li>
+          </ul>
+        </cagov-chart-dashboard-positivity-rate>               
+      </div> 
+    </div>
+
+
+
 <div id="hospital-graph" class="toggle-group-element">
   <div id="hospitalChartContainer">
-    <div class="mx-auto">
+    <!-- <div class="mx-auto">
       <p>The number of hospitalizations due to confirmed and suspected COVID-19 cases in California reached a total of {{_varStatHospitalTotal_}}, {{_varStatHospitalChangeText_}} {{_varStatHospitalChange_ | abs}} from the prior day total. The number of ICU patients due to confirmed and suspected COVID-19 cases in California reached a total of {{_varStatIcuTotal_}}, {{_varStatIcuChangeText_}} {{_varStatIcuChange_ | abs}} from the prior day total.</p>
-    </div>
+    </div> -->
     <!-- <div class="tableauPlaceholder"></div> -->
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-12">
@@ -51,7 +110,7 @@ addtositemap: false
       <div class="col-lg-6 col-md-6 col-sm-12">
         <cagov-chart-dashboard-icu-beds class="chart">
           <ul class="d-none">
-            <li data-label="chartTitle">Confirmed deaths by race and ethnicity in California</li>
+            <li data-label="chartTitle">ICU beds in California</li>
             <li data-label="chartLegend1">{latest.ICU_AVAILABLE_BEDS.TOTAL} ICU beds available</li>
             <li data-label="chartLegend2Increase">{ABS_latest.CHANGE} increase from prior day total</li>
             <li data-label="chartLegend2Decrease">{ABS_latest.CHANGE} decrease from prior day total</li>
@@ -60,7 +119,7 @@ addtositemap: false
         </cagov-chart-dashboard-icu-beds>               
       </div> 
     </div>
-    <p class="small-text chart-footer-caption">footerText will go here</p>
+    <p class="small-text chart-footer-caption">lambda footer text epsilon</p>
   </div>
 
 </div>
