--- a/ko/data-and-tools/index.html
+++ b/ko/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>데이터 및 도구</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 31일 오후 5:20</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 4월 1일 오전 6:28</p>
           
         </div>
       </div>
