--- a/latest-news/index.html
+++ b/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>News from the Governor&rsquo;s Office</h1>
           
-            <p class="small-text">Last updated&nbsp;March 31, 2021 at 5:21 PM</p>
+            <p class="small-text">Last updated&nbsp;April 1, 2021 at 6:29 AM</p>
           
         </div>
       </div>
